# soft-raster

./: CMakeLists.txt  README.md
raster/: CMakeLists.txt  main.cpp
raster/include/: Lights.hpp  Material.hpp  Matrix.hpp  Texture.hpp  Zbuffer.hpp  box.hpp  camera.hpp  common.hpp  hierarchyZbuffer.hpp  image.hpp  mesh.hpp  model.hpp  octree.hpp  shader.hpp  triangle.hpp  vec.hpp
raster/src/: Lights.cpp  Texture.cpp  Zbuffer.cpp  hierarchyZbuffer.cpp  image.cpp  mesh.cpp  model.cpp  octree.cpp  shader.cpp
